# dependcies

./: .gitignore  .gitmodules  CMakeLists.txt  Depdencies.sln  build.bat  build.cmd  clean.bat  update.bat
Depdencies/: Depdencies.vcxproj
cmake/: base64.cmake  functions.cmake  iconv.cmake  json.cmake  stb.cmake  zlib.cmake
tool/cmake/: cmake.bat
